--- a/css/style.scss
+++ b/css/style.scss
@@ -1,14 +1,17 @@
 body {
   padding: 0;
   margin: 0;
+  background-color: #ffffff;
 }
 
-.header{
-  width:100%;
-  }
+.header {
+  width: 100%;
+}
 
-.swordrosBox{
-  img{
-    width:100%;
-  }
+.jianxin{
+  width: 700px;
+  height: 370px;
+  margin: 10% auto;
+  background-image: url("../images/jianxin-1.png");
+
 }
