--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,17 @@ body {
   margin: 10% auto;
   background-image: url("../images/jianxin-1.png"); }
 
+.waitme {
+  width: 100%; }
+  .waitme img {
+    width: 180px;
+    display: block;
+    /* margin: 60px auto; */
+    position: absolute;
+    height: 330px;
+    left: 50%;
+    top: 50%;
+    margin-left: -90px;
+    margin-top: -165px; }
+
 /*# sourceMappingURL=style.css.map */
