--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  font-family: 'Microsoft YaHei'; }
 
 .header {
   width: 100%; }
